--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -9,6 +9,7 @@
 
 .form {
   text-align: center;
+  margin: 2rem 0;
 }
 
 .form > input {
@@ -29,4 +30,26 @@
   border-top-right-radius: 0.4rem;
   border-bottom-right-radius: 0.4rem;
   cursor: pointer;
+}
+
+/* || DISPLAY GRID */
+.grid-container {
+  display: grid;
+  padding: 1rem;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-gap: 2rem;
+}
+
+.grid-item {
+  padding: 1rem;
+  border: 0.1rem solid var(--text-color-primary);
+  word-wrap: break-word;
+  border-bottom-right-radius: 1rem;
+}
+
+.user-msg {
+  font-size: 2rem;
+  grid-column: span 3;
+  justify-self: center;
+  text-align: center;
 }
