--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,5 @@
 .App {
   background-color: var(--bg-color-primary);
   color: var(--text-color-primary);
-  height: 100vh;
+  min-height: 100vh;
 }
