--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -6,4 +6,12 @@
 .header {
   padding: 0.5rem 1rem;
   border-bottom: 0.1rem solid var(--text-color-primary);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.header a {
+  color: var(--text-color-primary); 
 }
