--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -3,6 +3,8 @@
   --text-color-primary: #E8EAED;
 }
 
+/* || FORM */
+
 .wrapper {
   padding: 2rem;
 }
@@ -33,6 +35,7 @@
 }
 
 /* || DISPLAY GRID */
+
 .grid-container {
   display: grid;
   padding: 1rem;
@@ -66,6 +69,15 @@
   position: absolute;
   right: -0.6rem;
   top: -0.8rem;
+}
+
+.date {
+  position: absolute;
+  right: 1.5rem;
+  top: -0.65rem;
+  padding: 0 0.2rem;
+  border: 0.1rem solid var(--text-color-primary);
+  background-color: var(--bg-color-primary);
 }
 
 .user-msg {
