--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  --bg-color-primary: #202124;
+  --text-color-primary: #E8EAED;
+}
