--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -12,6 +12,17 @@
   width: 100%;
 }
 
-.header a {
+.header-links a {
   color: var(--text-color-primary); 
+}
+
+.header-links button {
+  border: none;
+  padding: 0.2rem 0.5rem;
+  font-family: inherit;
+  color: var(--text-color-primary);
+  background-color: var(--bg-color-primary);
+  font-size: 1rem;
+  margin: 0 1rem;
+  cursor: pointer;
 }
