--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,8 @@ code {
   --bg-color-primary: #202124;
   --text-color-primary: #E8EAED;
 }
+
+[data-theme='light'] {
+  --bg-color-primary: #E8EAED;
+  --text-color-primary: #202124;
+}
