feat: adding focus to input using useRef

--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -16,6 +16,7 @@
   border-top-left-radius: 0.4rem;
   border-bottom-left-radius: 0.4rem;
   border-right: none;
+  outline: transparent;
 }
 
 .form > button {
