feat: added category radio buttons for input

--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -27,3 +27,15 @@
   border-bottom-right-radius: 0.4rem;
   cursor: pointer;
 }
+
+.radio-wrapper {
+  padding: 1.5rem;
+}
+
+.radio-label {
+  margin:  0rem 1rem;
+}
+
+.radio-label input {
+  margin: 0rem 0.3rem;
+}
