--- a/src/components/DisplayGrid/display_grid.css
+++ b/src/components/DisplayGrid/display_grid.css
@@ -1,6 +1,6 @@
 .grid-container {
   display: grid;
-  padding: 1rem;
+  padding: 1rem 5rem;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   grid-gap: 2rem;
 }
